Move restconf.common.util
The contents of this package is only used by
RestconfOperationsServiceImpl, move them there and mark them as
reprecated.

JIRA: NETCONF-837
Change-Id: I8624be2d6d55f78e01004da718d93c30399f31f1
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>